# jaxga

./: .gitignore  TODO.md  pyproject.toml
benchmarks/: test_clifford.py  test_jaxga.py  test_tfga.py
jaxga/: jaxga.py  mv.py  signatures.py
jaxga/flaxmodules/: mvproddense.py
jaxga/ops/: add.py  dual.py  inverse.py  keepnonzero.py  multiply.py  reduce_same.py  sandwich.py  select.py  simple_exp.py
src/jaxga/: jaxga.py  mv.py  signatures.py
src/jaxga/flaxmodules/: mvproddense.py
src/jaxga/ops/: add.py  multiply.py  reduce_same.py  sandwich.py
tests/: test_matrices.py  test_mv_dual.py  test_mv_multiply.py
